--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@types/react-dom": "^18.0.0",
     "@xstate/inspect": "^0.7.0",
     "@xstate/react": "^3.0.1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
-    "xstate": "^4.35.2"
+    "xstate": "^4.35.2",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
