--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.4",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -16,11 +17,13 @@
     "@types/react-dom": "^18.0.0",
     "@xstate/inspect": "^0.7.0",
     "@xstate/react": "^3.0.1",
+    "ethers": "^5.7.2",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
+    "wagmi": "^0.9.6",
     "web-vitals": "^2.1.0",
     "xstate": "^4.35.2",
     "yup": "^0.32.11"
